⬇️  Overflow auto - spacing fixes for asides

--- a/styles/_prosemirror.scss
+++ b/styles/_prosemirror.scss
@@ -7,6 +7,7 @@
   font-variant-ligatures: none;
   font-feature-settings: "liga" 0; /* the above doesn't seem to work in Edge */
   outline: none;
+  overflow: auto;
 }
 .ProseMirror pre {
   white-space: pre-wrap;
